<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tip Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="bill_total">Bill total</string>
    <string name="tenPC">10%</string>
    <string name="fifteenPC">15%</string>
    <string name="twentyPC">20%</string>
    <string name="tipTextView">Tip</string>
    <string name="totalTextView">Total</string>
    <string name="customTextView">Custom</string>

</resources>
